# calGNN

./: .gitignore  README.md  pyproject.toml
depth_width/: args.py  depth.py  metrics.py  models.py  run.txt  utils.py  width.py
remove_edges/: args.py  create_model.py  models.py  plot_results.py  remove_edges.py  run.txt  utils.py
train_and_calibrate/: args.py  calibration_methods.py  create_model.py  get_dataset.py  main.py  main_loss.py  models.py  run.txt  tuning.py  utils.py
train_and_calibrate/metacal/: metacal.py
