[tool.poetry]
name = "calibration"
version = "0.1.0"
description = ""
authors = ["Yushan Liu <yushan.liu@siemens.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
scipy = "^1.7.3"
tqdm = "^4.62.3"
torch = "^1.10.2"
torch-geometric = "^2.0.3"
torch-sparse = "^0.6.12"
torch-scatter = "^2.0.9"
hyperopt = "^0.2.7"
tensorflow = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
